--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
-        var socket = io.connect('http://' + document.domain + ':' + location.port);
+        var socket = io.connect('https://' + document.domain + ':' + location.port);
         var audioFiles = [{% for filename in audio_files %}'{{ filename }}',{% endfor %}];
         var currentIndex = -1;
 
